Updating hub content to match live

--- a/app/views/hub/about-identity-accounts.html
+++ b/app/views/hub/about-identity-accounts.html
@@ -21,11 +21,21 @@
     <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
       <p>GOV.UK Verify is new, and government services are joining all the time. The current services using Verify are:</p>
       <ul class="list-bullet list">
-        {% for name, service in services %}
-        {% if serviceLOA < '2' %}
-        <li>{{service.name}}</li>
-        {% endif %}
-        {% endfor %}
+        <li>complete your Self Assessment</li>
+        <li>check your State Pension</li>
+        <li>sign in to your personal tax account</li>
+        <li>view or share your driving licence information</li>
+        <li>get your State Pension</li>
+        <li>complete your claim or access your Universal Credit account</li>
+        <li>claim your redundancy payment and monies owed</li>
+        <li>check your income tax for the current year</li>
+        <li>report a medical condition that affects your driving</li>
+        <li>renew your short-term medical driving licence</li>
+        <li>check or update your company car tax</li>
+        <li>use Rural Payments</li>
+        <li>help friends and family with their tax</li>
+        <li>apply for a vehicle operator licence</li>
+        <li>apply for a DBS basic check</li>
       </ul>
     </div>
   </details>
