--- a/app/views/hub/select-documents.html
+++ b/app/views/hub/select-documents.html
@@ -15,7 +15,13 @@
       </h1>
 
       {{data['non-uk-group']}}
-      <p>You need proof of who you are. You’ll be asked to provide the details from the identity documents you have so they can be double checked with DVLA, DVA and HM Passport Office.</p>
+      <p>Certified companies use information from identity documents to verify you.</p>
+
+      <div class="panel panel-border-wide">
+        <p>
+          The more identity documents you can provide now, the more likely it is that the company can verify you successfully.
+        </p>
+      </div>
 
       <form action="/hub/select-other-documents{{formQuery}}">
         {{formData | safe}}
