Fixed forgot idp journey

--- a/app/views/hub/forgot-company.html
+++ b/app/views/hub/forgot-company.html
@@ -24,7 +24,7 @@
         <li>texts on your mobile phone</li>
       </ul>
 
-      <p>You can try to get your identity verified by a certified company again.</p>
+      <p>You can try to <a href="/hub/verify-signin-picker{{formQuery}}">get your identity verified</a> by a certified company again or <a href="javascript:history.back();">go back to the list of certified companies</a>.</p>
 
     </div>
   </div>
