--- a/app/views/hub/signin-idp-picker.html
+++ b/app/views/hub/signin-idp-picker.html
@@ -12,7 +12,7 @@
     {% include "includes/verify-logo.html" %}
       <div class="column-two-thirds">
         <h2 class="heading-large">Who do you have an identity account with?</h2>
-        <p>If you don’t have an identity account, you can <a href="/about{{ formQuery | safe }}&registration=true">create a new one</a>.</p> 
+        <p>If you don’t have an identity account, you can <a href="/hub/about{{ formQuery | safe }}&registration=true">create a new one</a>.</p> 
       </div>
     </div>
     {% for idp in idps %}
@@ -44,7 +44,7 @@
         </div>
       {% endif %}
     {% endfor %}
-    <p><a href="/forgot-company{{formQuery}}">I can’t remember which company verified me</a></p>
+    <p><a href="/hub/forgot-company{{formQuery}}">I can’t remember which company verified me</a></p>
 
   </div>
 
