--- a/app/views/includes/idp-sidebar.html
+++ b/app/views/includes/idp-sidebar.html
@@ -1,6 +1,7 @@
 <div class="column-one-third certified-logo">
-	<img src="/public/images/gov_uk_verify_certified_company.png" alt="">
-
+	<div class="certified-logo-container">
+		<img src="/public/images/gov_uk_verify_certified_company.png" alt="">
+	</div>
 	<h1 class="heading-large">Live web chat</h1>
 	<p>
 		We have experts ready to help</br>
