--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -22,7 +22,7 @@
       </ul>
 
 
-      <p>Based on your answers, 3 companies can verify you now:</p>
+      <p>Based on your answers, these companies can verify you now:</p>
 
 
  
