Hack stable prototype to work for sign in hints testing

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -107,15 +107,15 @@ $path: "/public/images/";
 
 .verify-idp-logo-lockup {
   padding: 20px 0;
-  
+
   .idp-logo-lockup {
     height:60px;
   }
-  
+
   .verify-logo-lockup {
-    height:60px; 
-    margin-left: 30px; 
-    padding-left: 30px; 
+    height:60px;
+    margin-left: 30px;
+    padding-left: 30px;
     border-left:#bfc1c3 solid 1px;
   }
 }
@@ -170,4 +170,9 @@ $path: "/public/images/";
   dd {
     width:90%;
   }
+}
+
+.hint{
+    color: grey;
+    margin: 0;
 }
