--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,148 +13,14 @@
 
       <div class="column-half">
         <h1 class="heading-large">GOV.UK Verify prototype</h1>
+        <br>
         <div class="button-wrap">
-          <h2 class="heading-medium">Example LOA1 service</h2>
           <ul class="start-button-list">
-            <li><input type="submit" formaction="/service/view-driving-licence-start?requestId=view-share-driving-licence" value="View or share your driving licence information" class="button" id="next-button"></li>
-          </ul>
-          <h2 class="heading-medium">Example LOA2 service</h2>
-          <ul class="start-button-list">
-            
-            <li><input type="submit" formaction="/service/personal-tax-account-start?requestId=personal-account" value="Personal tax account" class="button" id="next-button"></li>
+            <li><input type="submit" formaction="/service/dbs-start?requestId=dbs" value="Start now" class="button button-start" id="next-button"></li>
           </ul>
         </div>
-        <h2 class="heading-medium">Forcing users to fail verification</h2>
-        <p>By entering the phone number 07712225464 when prompted, users will go down the 'fail verification' journey.</p>
       </div>
-
-     <!--  <div class="column-half">
-
-      <div id="usersLOA">
-        <h2 class="heading-medium">Select additional options</h2>
-        <h3 class="heading-small">Users level of assurance</h3>
-          <div class="form-group">
-            <fieldset class="inline">
-              <div class="multiple-choice">
-                <input id="radio-0" type="radio" name="usersLOA" value="0"  checked="checked">
-                  <label class="block-label selection-button-radio" for="radio-0">
-                  Unverified
-                </label>
-              </div>
-              <div class="multiple-choice">
-                <input id="radio-1" type="radio" name="usersLOA" value="1">
-                <label class="block-label selection-button-radio" for="radio-1">
-                  LOA1
-                </label>
-              </div>
-              <div class="multiple-choice">
-                <input id="radio-2" type="radio" name="usersLOA" value="2">
-                <label class="block-label selection-button-radio" for="radio-2">
-                  LOA2
-                </label>
-              </div>
-            </fieldset>
-          </div>
-        </div>
-        <div id="pass-fail">
-          <h3 class="heading-small">Succeed/fail</h3>
-          <div class="form-group">
-            <fieldset class="inline">
-              <div class="multiple-choice">
-                <input id="verify-true" type="radio" name="verify" value="true"  checked="checked">
-                <label class="block-label selection-button-radio" for="verify-true">
-                  Pass
-                </label>
-              </div>
-              <div class="multiple-choice">
-                <input id="verify-false" type="radio" name="verify" value="false">
-                <label class="block-label selection-button-radio" for="verify-false">
-                  Fail
-                </label>
-              </div>
-            </fieldset>
-          </div>
-        </div>
-        <div id="validation">
-          <h3 class="heading-small">Input validation</h3>
-          <div class="form-group">
-            <fieldset class="inline">
-              <div class="multiple-choice">
-                <input id="validate-false" type="radio" name="validation" value="false"  checked="checked">
-                <label class="block-label selection-button-radio" for="validate-false">
-                  Off
-                </label>
-              </div>
-              <div class="multiple-choice">
-                <input id="validate-true" type="radio" name="validation" value="true">
-                <label class="block-label selection-button-radio" for="validate-true">
-                  On
-                </label>
-              </div>
-            </fieldset>
-          </div>
-        </div>
-        <div id="thirdCycle">
-            <h3 class="heading-small">Third cycle matching</h3>
-            <div class="form-group">
-              <fieldset class="inline">
-                <div class="multiple-choice">
-                  <input id="thirdCycle-false" type="radio" name="thirdCycle" value="false" checked="checked">
-                  <label class="block-label selection-button-radio" for="thirdCycle-false">
-                    Off
-                  </label>
-                </div>
-                <div class="multiple-choice">
-                  <input id="thirdCycle-true" type="radio" name="thirdCycle" value="true">
-                  <label class="block-label selection-button-radio" for="thirdCycle-true">
-                    On
-                  </label>
-                </div>
-              </fieldset>
-            </div>
-          </div>
-          <div id="connected-idp">
-              <h3 class="heading-small">Connected IDPs</h3>
-              <div class="form-group">
-                <fieldset>
-                  <div class="multiple-choice">
-                    <input id="connected-barclays" type="checkbox" name="connectedIDP" value="barclays" checked="checked">
-                    <label class="block-label selection-button-checkbox" for="connected-barclays">
-                      Barclays
-                    </label>
-                  </div>
-                  <div class="multiple-choice">
-                    <input id="connected-digidentity" type="checkbox" name="connectedIDP" value="digidentity" checked="checked">
-                    <label class="block-label selection-button-checkbox" for="connected-digidentity">
-                      Digidentity
-                    </label>
-                  </div>
-                  <div class="multiple-choice">
-                    <input id="connected-experian" type="checkbox" name="connectedIDP" value="experian" checked="checked">
-                    <label class="block-label selection-button-checkbox" for="connected-experian">
-                      Experian
-                    </label>
-                  </div>
-                  <div class="multiple-choice">
-                    <input id="connected-post-office" type="checkbox" name="connectedIDP" value="post-office" checked="checked">
-                    <label class="block-label selection-button-checkbox" for="connected-post-office">
-                      Post Office
-                    </label>
-                  </div>
-                  <div class="multiple-choice">
-                    <input id="connected-secureidentity" type="checkbox" name="connectedIDP" value="secureidentity" checked="checked">
-                    <label class="block-label selection-button-checkbox" for="connected-secureidentity">
-                      SecureIdentity
-                    </label>
-                  </div>
-
-                </fieldset>
-              </div>
-            </div>
-        </div>
- -->
-      </form>
-    </div>
+    </form>
   </div>
 </main>
 
