--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -36,6 +36,12 @@
       <li>
         <a href="/prototype-admin/clear-data">Clear data</a>
       </li>
+      <li>
+        <a href="/service/dbs-start?requestId=dbs">DBS start page</a>
+      </li>
+      <li>
+        <a href="/service/check-state-pension-start?requestId=check-state-pension">Check Your State Pension start page</a>
+      </li>
     </ul>
   {% endif %}
 {% endblock %}
