--- a/app/views/idp/sign-in.html
+++ b/app/views/idp/sign-in.html
@@ -15,33 +15,40 @@
 		<div class="column-two-thirds">
 			<h1 class="heading-large ">Sign in to your GOV.UK identity account</h1>
 			<div class="form-group">
-				<form id="main-form" action="/idp/sign-in-code-send{{formQuery}}" method="post">
-					
+          {% if data['userHasIdpAccount'] == 'true' %}
+            <form id="main-form" action="/idp/sign-in-code-send{{formQuery}}" method="post">
+            <input type="hidden" name="userHasIdpAccountError" value="false">
+          {% else %}
+            <form id="main-form" action="{{idpRoot}}/sign-in{{formQuery}}" method="post">
+            <input type="hidden" name="userHasIdpAccountError" value="true">
+          {% endif %}
+
+          {% if data['userHasIdpAccountError'] == 'true' %}
+            <span style="margin-bottom: 25px;" class="error error-message" id="error-message-full-name">We were unable to find an account with this email address. Please try a different email address or <a href="#">create an account</a>.</span>
+          {% endif %}
 					{{ formData|safe }}
 
 					<div class="form-group">
 						<label class="form-label">Email address</label>
 					<input class="form-control" type="text" placeholder="Enter your email address">
 					</div>
-			
+
 					<div class="form-group">
 						<label class="form-label">Password</label>
 						<input class="form-control" type="password" placeholder="Enter your password" autocomplete="off">
 					</div>
-					
-					<span class="error error-message hidden" id="error-message-full-name">Username or password not recognised</span>
-			
+
 					<button class="button">
 						Continue
 					</button>
-					
+
 					<div  class="secondary-button">
 						<a href="javascript:history.back()">Back</a>
 					</div>
-			
+
 					<p>If you don't already have a {{idpName}} identity account you can <a href="{{baseURL}}/input-email{{formQuery}}">create an account</a>.</p>
 				</form>
-				
+
 			</div>
 		</div>
 		{% include "includes/idp-sidebar.html" %}
