Fix loa2 journay

--- a/app/views/hub/eidas-interstitial.html
+++ b/app/views/hub/eidas-interstitial.html
@@ -30,7 +30,7 @@
         </p>
 
         <form method="POST" action="/hub/verify-signin-picker{{formQuery}}">
-          <input type="hidden" name="userHasIdpAccount" value="true">
+          <input type="hidden" name="userHasIdpAccount" value="false">
           <input type="hidden" name="userHasIdpAccountError" value="false">
           <button class="button">Use GOV.UK Verify</button>
         </form>
