Fix bullets on eidas page

--- a/app/views/hub/eidas-interstitial.html
+++ b/app/views/hub/eidas-interstitial.html
@@ -19,7 +19,7 @@
 
         <p>
           Registering with GOV.UK Verify usually takes about 15 minutes. It works best if you have:
-          <ul>
+          <ul class="list-bullet">
             <li>a UK address</li>
             <li>a valid passport or photocard driving licence</li>
           </ul>
