--- a/app/views/hub/about-certified-companies.html
+++ b/app/views/hub/about-certified-companies.html
@@ -5,13 +5,11 @@
 
 {% block slide_content %}
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/about-identity-accounts" accept-charset="UTF-8" method="get">
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/choose-a-company?registration=true&user_age=true&user_uk=true&drivingLicence=true&drivingLicenceGB=true&passport=true&mobile=true&apps=true" accept-charset="UTF-8" method="get">
 
   {{ formData | safe }}
 
-  <p>A certified company verifies your identity. They’ve all met security standards set by government.</p>
-
-  <p>You don’t need to be an existing customer with a company as they've built new, secure systems to verify identities.</p>
+  <p>A certified company will verify your identity.</p>
 
   <ul class="list-companies">
     <li>
@@ -21,23 +19,19 @@
       <img alt="Post Office" src="/public/images/idp-logos/white/post-office.png">
     </li>
   </ul>
-  </br>
+</br>
 
-<p>There’s no charge for this service.</p>
+<p>They will never share your information for any other purpose without your consent, and they both meet government privacy and security standards.</p>
+</br>
 
 <details role="group">
   <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-    <span class="summary">How companies can verify identities</span>
+    <span class="summary">How these companies verify identities</span>
   </summary>
 
   <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-    <p>These companies can use their own data, and they can access data like credit records.{% if serviceLOA == '2' %} They’re able to check that information from passports and driving licences is correct.{% endif %}</p>
-
-    <p>Certified companies meet government privacy standards, so you can trust them with your personal information. They won’t share or sell your data for any other purposes without your consent.</p>
-
-    <p>There won’t be any effect on your credit score.</p>
-
-    <p>More than one certified company means you choose who verifies your identity, and it means the system overall is stronger.</p>
+    <p>These companies can check it’s really you by using their own records, or by accessing information like credit records. If you have a passport or driving licence, they can check that too.</p>
+    <p>Verifying your identity will not affect your credit score.</p>
   </div>
 </details>
 
