--- a/app/views/hub/about.html
+++ b/app/views/hub/about.html
@@ -5,11 +5,11 @@
 
 {% block slide_content %}
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/about-certified-companies" accept-charset="UTF-8" method="get">
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/about-before-you-start" accept-charset="UTF-8" method="get">
 
   {{ formData | safe }}
 
-  <p>GOV.UK Verify is a secure service built to help fight the growing problem of online identity theft.</p>
+  <p>GOV.UK Verify is a secure way to prove who you are. It helps protect you from online identity theft.</p>
 
   {% if servicewhyVerifysUsed.length > 1 %}
   <p>{{serviceProvider}} uses Verify to help prevent other people from {{servicewhyVerifysUsed | safe}}, as it stops someone from pretending to be you.</p>
