Update list of IDPs on interstitial

--- a/app/views/hub/interstitial.html
+++ b/app/views/hub/interstitial.html
@@ -28,7 +28,7 @@
               <input id="radio-2" type="radio" name="radio-group" value="verify">
               <label for="radio-2">
                 <p style='font-weight: bold;'>Sign in with GOV.UK Verify</p>
-                <p class='hint'>You’ll have an account if you’ve already proved your identity with either Barclays, Digidentity, Experian, Post Office or SecureIdentity.</p>
+                <p class='hint'>You’ll have an account if you’ve already proved your identity with either Post Office or Digidentity.</p>
               </label>
             </div>
             <div class="multiple-choice">
